...
      return;
    }
    setPage(page + 1);
    fetchStudentQuizs();
  };
  return (
    <View style={styles.container} testID="studentQuizScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={studentQuizList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
