...
import Form from '../../../shared/components/form/jhi-form';
import { useDidUpdateEffect } from '../../../shared/util/use-did-update-effect';
import styles from './teacher-profile-styles';

// set up validation schema for the form
const validationSchema = Yup.object().shape({
  teacherCode: Yup.string().required(),
});

function TeacherProfileEditScreen(props) {
  const {
    getTeacherProfile,
    updateTeacherProfile,
...
          <Form initialValues={formValue} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
            <FormField
              name="teacherCode"
              ref={teacherCodeRef}
              label="Teacher Code"
              placeholder="Enter Teacher Code"
              testID="teacherCodeInput"
              inputType="text"
              autoCapitalize="none"
            />

            <FormButton title={'Save'} testID={'submitButton'} />
          </Form>
...
