...
      return;
    }
    setPage(page + 1);
    fetchTeacherProfiles();
  };
  return (
    <View style={styles.container} testID="teacherProfileScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={teacherProfileList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
